osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_random_bool/test_random_bool_validation.txt
error: invalid `percentage`
--> main.sml:1:26
     |
   1 | r = RandomBool(percentage=1.1)
     |                           ^ this must be between 0.0 and 1.0
